# Harbour

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  main.cpp  setup-env.bat  vcpkg-configuation.json  vcpkg.json
CMake/: setup_vcpkg.cmake
Harbour/: allGames.json
Harbour/include/: App.h  GameCard.h  MenuScreen.h
Harbour/include/utils/: ColorManager.h  DownloadManager.h  FileManager.h  LoadImage.h
Harbour/src/: App.cpp  GameCard.cpp  MenuScreen.cpp  main.cpp
Harbour/src/utils/: ColorManager.cpp  DownloadManager.cpp  FileManager.cpp  LoadImage.cpp
docs/: BUILDING.md
src/: main.cpp
